#463: Show build-info in the footer
